<resources>

    <string name="app_name">ArtFrame</string>
    <string name="artist_unknown">Unknown</string>
    <string name="year_unknown">"?"</string>
    <string name="artist_years">%1$s - %2$s</string>
    <string name="unknown">"?"</string>
    <string name="artwork_description">%1$s</string>
    <string name="variable">%1$s</string>
    <string name="favorites_title">Favorites</string>
    <string name="artists_header">Artists</string>
    <string name="artists_detail">Artists Detail</string>
    <string name="artworks_detail">Artwork Detail</string>
    <string name="artist_label">Artist</string>
    <string name="artwork_header">Artworks</string>
    <string name="date_header">1900 - 1950</string>
    <string name="artist_artworks_title">Artist\'s  Artworks</string>
    <string name="artist_name_placeholder">Artist Name</string>
    <string name="iv_arrow_left_descr">image view arrow left</string>
    <string name="iv_favorite_descr">image view favorite</string>
    <string name="save_icon">save icon</string>
    <string name="wallpaper_icon">wallpaper icon</string>
    <string name="share_icon">share icon</string>
    <string name="shimmer_frame_descr">shimmer frame</string>
    <string name="full_screen">full screen</string>
    <string name="tv_date_label">Creation Date</string>
    <string name="tv_medium_label">Technique</string>
    <string name="tv_dimension_label">Dimensions:</string>
    <string name="place_of_origin">Place of Origin</string>
    <string name="tv_credit_line_label">Collection</string>
    <string name="artwork_image_url">https://www.artic.edu/iiif/2/%s/full/1600,/0/default.jpg</string>
    <string name="virtual_image_url">https://clementcariou.github.io/virtual-art-gallery/build</string>
    <string name="tv_years">Years</string>
    <string name="no_favorites">No favorites added yet</string>
    <string name="image_saved">Image downloaded</string>
    <string name="shared_saved">Image shared</string>
    <string name="wallpaper_message">Set as Wallpaper</string>
    <string name="artist_details_not_found">Artist details not found</string>
    <string name="description_icon">description icon</string>
    <string name="description_label">Description</string>
    <string name="no_description">Description information not found</string>
    <string name="no_dimension">Dimensions information not found</string>
    <string name="no_collection">Collection information not found</string>
    <string name="no_artist">Artist information not found</string>
    <string name="no_date">Date information not found</string>
    <string name="no_medium">Medium information not found</string>
    <string name="no_credit">Credit line information not found</string>
    <string name="no_place">Place of origin information not found</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="favorite">favorite</string>
    <string name="wallpaper">wallpaper</string>
    <string name="bottom_nav_menu_artworks">Artworks</string>
    <string name="bottom_nav_menu_artist">Artists</string>
    <string name="bottom_nav_menu_favorites">Favorites</string>
    <string name="shared_image_prefix">shared_image</string>
    <string name="art_frame_prefix">artFrame</string>
    <string name="image_view_favorite">image view favorite</string>
    <string name="delete_item">Delete the selected item</string>
    <string name="delete_all">Delete all</string>
    <string name="quiz_score">Score: %1$d</string>
    <string name="tv_question">Question: %1$d</string>
    <string name="text_view_question">Question: </string>
    <string name="tv_score">Score:</string>
    <string name="tv_correct">Correct: %1$d</string>
    <string name="tv_wrong">Wrong:</string>
    <string name="btn_next_question">Next Question</string>
    <string name="quiz_title">Game</string>
    <string name="error_message">An error occurred while loading the question.</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="collections_text">Collections</string>
    <string name="thanks_text">Thanks to Clément Cariou</string>
    <string name="close_button">close button</string>
    <string name="dark_night_theme">dark/night theme</string>
    <string name="tv_question_text">Guess the artist of this artwork?</string>
    <string name="progress_text">Game is Loading...</string>
    <string name="label_all_collections">All Collections:</string>
    <string name="label_your_collection">Collections you own:</string>
    <string name="label_collections_value">Collections value:</string>
    <string name="artwork_price">$%s</string>
    <string name="artwork_count">%d</string>
    <string name="collection_value">$%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_title_1">Discover Artworks</string>
    <string name="onboarding_desc_1">Browse thousands of artworks, read details, and meet the artists.</string>
    <string name="onboarding_title_2">Collect Your Favorites</string>
    <string name="onboarding_desc_2">Add the artworks you love to your favorites and build your personal collection.</string>
    <string name="onboarding_title_3">Learn with Quizzes</string>
    <string name="onboarding_desc_3">Guess the artist from the artwork, earn points, and test your art knowledge.</string>
    <string name="onboarding_title_4">Explore Virtual Gallery</string>
    <string name="onboarding_desc_4">View your collections and experience the gallery within the app.</string>
    <string name="onboarding_btn_next">Next</string>
    <string name="onboarding_btn_back">Back</string>
    <string name="onboarding_btn_skip">Skip</string>
    <string name="onboarding_btn_start">Get Started</string>
    <string name="virtual_gallery_title">Virtual Art Gallery</string>
    <string name="virtual_gallery_warning">Experience immersive artworks in a fully interactive space.
For the best performance, we recommend a stable internet connection.Do you want to continue?</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_reset">Reset</string>
    <string name="dialog_success_title">Tebrikler!</string>
    <string name="dialog_success_desc">Popüler bir sanat eserini doğru bildin ve koleksiyonuna ekledin!</string>
    <string name="dialog_success_btn">Harika</string>

</resources>
