<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/scroll_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_24dp">

    <ImageView
        android:layout_width="@dimen/success_icon_size"
        android:layout_height="@dimen/success_icon_size"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_done" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/dialog_success_title"
        android:textColor="@color/onPrimary"
        android:textSize="@dimen/dialog_title_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:gravity="center"
        android:text="@string/dialog_success_desc"
        android:textColor="@color/onPrimary"
        android:textSize="@dimen/dialog_desc_text_size" />

    <Button
        android:id="@+id/btnAwesome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:backgroundTint="@color/onboarding_title"
        android:text="@string/dialog_success_btn"
        android:textColor="@color/primary" />

</LinearLayout>