<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/iv_favorite_margin">

    <TextView
        android:id="@+id/tv_question_number"
        style="@style/TvDetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        style="@style/TvDetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_correct"
        style="@style/TvDetailLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question_number"
        tools:text="Correct:" />


    <ImageView
        android:id="@+id/ivArtwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/iv_favorite_margin"
        android:layout_marginBottom="@dimen/iv_favorite_margin"
        android:contentDescription="@string/artwork_header"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/btnOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_correct" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="@dimen/progress_indicator_size"
        android:layout_height="@dimen/progress_indicator_size"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible"
        app:indicatorColor="@color/progress_indicator_color"
        app:layout_constraintBottom_toBottomOf="@id/ivArtwork"
        app:layout_constraintEnd_toEndOf="@id/ivArtwork"
        app:layout_constraintStart_toStartOf="@id/ivArtwork"
        app:layout_constraintTop_toTopOf="@id/ivArtwork" />

    <Button
        android:id="@+id/btnOption1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8dp"
        android:text="@string/artists_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivArtwork" />

    <Button
        android:id="@+id/btnOption2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8dp"
        android:text="@string/artists_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOption1" />

    <Button
        android:id="@+id/btnOption3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8dp"
        android:text="@string/artists_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOption2" />


    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_32dp"
        android:layout_marginBottom="@dimen/iv_favorite_margin"
        android:backgroundTint="@color/button_next_color"
        android:text="@string/btn_next_question"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOption3" />
</androidx.constraintlayout.widget.ConstraintLayout>
