<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <View
        android:id="@+id/dividerTop"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/share"
        android:layout_marginTop="@dimen/header_padding"
        android:src="@drawable/share"
        app:layout_constraintEnd_toStartOf="@id/ivFavorite"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="@dimen/item_year_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivShare"
        app:layout_constraintStart_toStartOf="@id/ivShare"
        app:layout_constraintTop_toBottomOf="@id/ivShare" />

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/favorite"
        android:src="@drawable/favorite_border"
        android:layout_marginTop="@dimen/header_padding"
        app:layout_constraintEnd_toStartOf="@id/iconDownload"
        app:layout_constraintStart_toEndOf="@id/ivShare"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:textSize="@dimen/item_year_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivFavorite"
        app:layout_constraintStart_toStartOf="@id/ivFavorite"
        app:layout_constraintTop_toBottomOf="@id/ivFavorite" />

    <ImageView
        android:id="@+id/iconDownload"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/download"
        android:layout_marginTop="@dimen/header_padding"
        android:src="@drawable/download"
        app:layout_constraintEnd_toStartOf="@id/iconWallpaper"
        app:layout_constraintStart_toEndOf="@id/ivFavorite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textSize="@dimen/item_year_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iconDownload"
        app:layout_constraintStart_toStartOf="@id/iconDownload"
        app:layout_constraintTop_toBottomOf="@id/iconDownload" />

    <ImageView
        android:id="@+id/iconWallpaper"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/wallpaper"
        android:src="@drawable/wallpaper"
        android:layout_marginTop="@dimen/header_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconDownload"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:textSize="@dimen/item_year_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iconWallpaper"
        app:layout_constraintStart_toStartOf="@id/iconWallpaper"
        app:layout_constraintTop_toBottomOf="@id/iconWallpaper" />


</androidx.constraintlayout.widget.ConstraintLayout>
