<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/space_4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_arrow_left_descr"
            android:padding="@dimen/padding_8dp"
            android:src="@drawable/arrow_left" />

        <TextView
            style="@style/ToolbarTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8dp"
            android:text="@string/collections_text" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/collectionsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/iv_favorite_margin"
        app:cardCornerRadius="@dimen/iv_favorite_margin"
        app:cardElevation="@dimen/padding_8dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/iv_favorite_margin">

            <TextView
                android:id="@+id/labelAllCollections"
                style="@style/CollectionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_all_collections"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAllCollections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBaseline_toBaselineOf="@id/labelAllCollections"
                app:layout_constraintStart_toEndOf="@id/labelAllCollections"
                tools:text="120" />

            <TextView
                android:id="@+id/labelYourCollections"
                style="@style/CollectionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8dp"
                android:text="@string/label_your_collection"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAllCollections" />

            <TextView
                android:id="@+id/tvYourCollections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBaseline_toBaselineOf="@id/labelYourCollections"
                app:layout_constraintStart_toEndOf="@id/labelYourCollections"
                tools:text="12" />

            <TextView
                android:id="@+id/labelCollectionsValue"
                style="@style/CollectionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8dp"
                android:text="@string/label_collections_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelYourCollections" />

            <TextView
                android:id="@+id/tvCollectionsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBaseline_toBaselineOf="@id/labelCollectionsValue"
                app:layout_constraintStart_toEndOf="@id/labelCollectionsValue"
                tools:text="$1,139,488" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collectionsCard"
        app:spanCount="3"
        tools:listitem="@layout/item_collection" />

</androidx.constraintlayout.widget.ConstraintLayout>